WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158449
Writing-mode-dependent properties don't apply if their value is a variable
https://bugs.webkit.org/show_bug.cgi?id=158449
Summary
Writing-mode-dependent properties don't apply if their value is a variable
Tim Horton
Reported
2016-06-06 16:53:54 PDT
Created
attachment 280647
[details]
repro The two boxes in the attached test case should render identically. However, the box which has -webkit-padding-start: var(--margin-leading); ends up getting no horizontal padding, because referencing variables in writing-mode/direction-dependent properties does not work.
Attachments
repro
(584 bytes, text/html)
2016-06-06 16:53 PDT
,
Tim Horton
no flags
Details
Patch
(7.35 KB, patch)
2016-06-09 10:53 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(7.39 KB, patch)
2016-06-09 11:00 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-06-06 16:54:21 PDT
I did some debugging, and found the point where this goes wrong, but I’m not sure how to fix it. Once we get into CSSParser::parseVariableDependentValue, our propID is the resolved one (PaddingLeft, for example). The CSSVariableDependentValue still has the unresolved propID (WebkitPaddingStart), though, so the comparison (property.id() == propID) fails, and we end up returning nullptr. I’m not sure if/when we should be doing the resolution, though. Inside parseVariableDependentValue?
Radar WebKit Bug Importer
Comment 2
2016-06-06 16:55:29 PDT
<
rdar://problem/26662478
>
Radar WebKit Bug Importer
Comment 3
2016-06-06 16:55:52 PDT
<
rdar://problem/26662474
>
Tim Horton
Comment 4
2016-06-09 10:53:23 PDT
Created
attachment 280928
[details]
Patch
Simon Fraser (smfr)
Comment 5
2016-06-09 10:55:05 PDT
Comment on
attachment 280928
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280928&action=review
> Source/WebCore/css/CSSParser.cpp:1871 > for (auto& property : m_parsedProperties) {
I would prefer a blank line above this one.
Tim Horton
Comment 6
2016-06-09 11:00:03 PDT
Created
attachment 280929
[details]
Patch
WebKit Commit Bot
Comment 7
2016-06-09 11:31:32 PDT
Comment on
attachment 280929
[details]
Patch Clearing flags on attachment: 280929 Committed
r201875
: <
http://trac.webkit.org/changeset/201875
>
WebKit Commit Bot
Comment 8
2016-06-09 11:31:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug